// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Badge/ChipBadge Main 1`] = `
.c0 {
  position: relative;
  padding: 16px;
}

.c3.c3 {
  font-weight: 600;
  font-size: 14px;
  font-style: normal;
}

.c2 {
  font-size: 16px;
  color: #AC00fC;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 22px;
  min-width: 32px;
  min-height: 32px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  background-color: #F5E0FF;
  color: #AC00fC;
}

.c4 {
  padding-left: 8px;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="primary"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check-circle fa-w-16 c2"
      color="primary"
      data-icon="check-circle"
      data-prefix="far"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <span
      className="MuiTypography-root c3 c4 MuiTypography-body2"
      fontSize="md"
      fontStyle="normal"
      fontWeight="bold"
    >
      Label
    </span>
  </div>
</div>
`;

exports[`Storyshots Button Main 1`] = `
.c0 {
  position: relative;
  padding: 16px;
}

.c2.c2 {
  box-sizing: border-box;
  border-radius: 12px;
  padding: 0 16px;
  min-width: 40px;
  height: 40px;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  font-size: 16px;
}

.c2.c2:hover {
  opacity: 0.7;
}

.c2.c2:disabled {
  opacity: 0.3;
  cursor: not-allowed;
  pointer-events: none;
}

.c3.c3 {
  background-color: #AC00fC;
  color: #FFFFFF;
}

.c4.c4 {
  border: 1px solid #AC00fC;
  color: #AC00fC;
}

.c4.c4:hover {
  background-color: #F5E0FF;
  opacity: 1;
}

.c5.c5 {
  color: #AC00fC;
}

.c1 {
  margin-bottom: 32px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h3
      className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
    >
      Button
    </h3>
    <button
      className="MuiButtonBase-root c2 c3"
      color="primary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      size="md"
      tabIndex={0}
      type="button"
    >
      Button
    </button>
  </div>
  <div
    className="c1"
  >
    <h3
      className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
    >
      Outline Button
    </h3>
    <button
      className="MuiButtonBase-root c2 c4"
      color="primary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      size="md"
      tabIndex={0}
      type="button"
    >
      Outline Button
    </button>
  </div>
  <div
    className="c1"
  >
    <h3
      className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
    >
      Text Button
    </h3>
    <button
      className="MuiButtonBase-root c2 c5"
      color="primary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      size="md"
      tabIndex={0}
      type="button"
    >
      Text Button
    </button>
  </div>
</div>
`;

exports[`Storyshots DetailsTable Main 1`] = `
.c0 {
  position: relative;
  padding: 16px;
}

.c2.c2 {
  font-weight: normal;
  font-size: 14px;
  font-style: normal;
}

.c6.c6 {
  font-weight: 600;
  font-size: 14px;
  font-style: normal;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  margin-bottom: 8px;
}

.c3 {
  -webkit-flex: 0 140px;
  -ms-flex: 0 140px;
  flex: 0 140px;
}

.c5 {
  font-size: 16px;
  color: #AC00fC;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 22px;
  min-width: 32px;
  min-height: 32px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding: 8px;
  background-color: #F5E0FF;
  color: #AC00fC;
}

.c7 {
  padding-left: 8px;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <span
        className="MuiTypography-root c2 c3 MuiTypography-body2 MuiTypography-colorTextSecondary"
        fontSize="md"
        fontStyle="normal"
        fontWeight="regular"
      >
        Last updated
      </span>
      4 Feb 2020
    </div>
    <div
      className="c1"
    >
      <span
        className="MuiTypography-root c2 c3 MuiTypography-body2 MuiTypography-colorTextSecondary"
        fontSize="md"
        fontStyle="normal"
        fontWeight="regular"
      >
        Creator
      </span>
      Majid Amiri
    </div>
    <div
      className="c1"
    >
      <span
        className="MuiTypography-root c2 c3 MuiTypography-body2 MuiTypography-colorTextSecondary"
        fontSize="md"
        fontStyle="normal"
        fontWeight="regular"
      >
        Status
      </span>
      <div
        className="c4"
        color="primary"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check-circle fa-w-16 c5"
          color="primary"
          data-icon="check-circle"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <span
          className="MuiTypography-root c6 c7 MuiTypography-body2"
          fontSize="md"
          fontStyle="normal"
          fontWeight="bold"
        >
          Verified
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <span
        className="MuiTypography-root c2 c3 MuiTypography-body2 MuiTypography-colorTextSecondary"
        fontSize="md"
        fontStyle="normal"
        fontWeight="regular"
      >
        Amount
      </span>
      <h3
        className="MuiTypography-root MuiTypography-h3"
      >
        140
      </h3>
    </div>
    <div
      className="c1"
    >
      <span
        className="MuiTypography-root c2 c3 MuiTypography-body2 MuiTypography-colorTextSecondary"
        fontSize="md"
        fontStyle="normal"
        fontWeight="regular"
      >
        Unit Price
      </span>
      <h3
        className="MuiTypography-root MuiTypography-h3 MuiTypography-colorPrimary"
      >
        100,00
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form/Input Main 1`] = `
.c0 {
  position: relative;
  padding: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-radius: 12px;
  background-color: #FFFFFF;
  border: 1px solid #CECDD9;
  padding: 0 16px;
  outline: none;
  height: 40px;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1:not(:last-child) {
  margin-right: 16px;
}

.c1:focus-within {
  border: 1px solid #AC00fC;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 600;
  font-size: 14px;
  line-height: 120%;
  padding: 8px;
  color: #292839;
  outline: none;
  border: none;
  height: 100%;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
}

.c2::-webkit-input-placeholder {
  font-weight: normal;
}

.c2::-moz-placeholder {
  font-weight: normal;
}

.c2:-ms-input-placeholder {
  font-weight: normal;
}

.c2::placeholder {
  font-weight: normal;
}

.c2:-moz-read-only {
  cursor: not-allowed;
}

.c2:read-only {
  cursor: not-allowed;
}

.c2:disabled {
  opacity: 0.3;
  cursor: not-allowed;
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2"
      disabled={false}
      hasError={false}
      name="textInput"
      placeholder="Placeholder"
      readOnly={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots History Main 1`] = `
.c0 {
  position: relative;
  padding: 16px;
}

.c15 .ReactCollapse--collapse {
  -webkit-transition: height 200ms ease-in-out;
  transition: height 200ms ease-in-out;
}

.c10.c10 {
  font-weight: 600;
  font-size: 14px;
  font-style: normal;
}

.c11.c11 {
  font-weight: normal;
  font-size: 14px;
  font-style: normal;
}

.c12.c12 {
  font-weight: normal;
  font-size: 14px;
  font-style: italic;
}

.c5 {
  width: 32px;
  height: 32px;
  border: solid 2px #CECDD9;
  background-color: #DFF8E3;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 100%;
  box-sizing: border-box;
  position: relative;
}

.c17 {
  width: 32px;
  height: 32px;
  border: solid 2px #CECDD9;
  background-color: #F0F0F4;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 100%;
  box-sizing: border-box;
  position: relative;
}

.c19 {
  width: 32px;
  height: 32px;
  border: solid 2px #CECDD9;
  background-color: #FFF3A2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 100%;
  box-sizing: border-box;
  position: relative;
}

.c7 {
  font-size: 16px;
  color: #6AD19C;
}

.c13 {
  font-size: 16px;
  color: #AC00fC;
  cursor: pointer;
  -webkit-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
}

.c13:hover {
  opacity: 0.7;
}

.c18 {
  font-size: 16px;
  color: #4D4B63;
}

.c20 {
  font-size: 16px;
  color: #958409;
}

.c3 {
  border-width: 0;
  border-style: solid;
  border-color: #CECDD9;
  border-left-width: 1px;
  -webkit-transition: all 0.1ms ease-in-out;
  transition: all 0.1ms ease-in-out;
  position: absolute;
  bottom: 0;
  left: 15px;
  top: 0;
}

.c3::before {
  content: "";
  width: 1px;
  height: 100%;
  display: inline-block;
}

.c1 {
  position: relative;
  min-height: 40px;
}

.c1:last-child .c2 {
  border-left-width: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
  border-bottom: 1px solid #F0F0F4;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin-right: 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c14 {
  margin-left: 16px;
  color: #292839;
}

.c16 {
  padding: 16px 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-cy="historyItem"
  >
    <div
      className="c2 c3"
    />
    <div
      className="c4"
    >
      <div
        className="c5 c6"
        color="success"
        prefix="far"
        size="md"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check-circle fa-w-16 c7"
          color="success"
          data-icon="check-circle"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <span
            className="MuiTypography-root c10 MuiTypography-body2"
            fontSize="md"
            fontStyle="normal"
            fontWeight="bold"
          >
            Test
          </span>
        </div>
        <div
          className="c9"
        >
          <span
            className="MuiTypography-root c11 MuiTypography-body2 MuiTypography-colorTextSecondary"
            fontSize="md"
            fontStyle="normal"
            fontWeight="regular"
          >
            Description
          </span>
        </div>
        <div
          className="c9"
        >
          <span
            className="MuiTypography-root c12 MuiTypography-body2 MuiTypography-colorTextSecondary"
            fontSize="md"
            fontStyle="italic"
            fontWeight="regular"
          >
            2020-06-20
          </span>
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-down fa-w-14 c13 c14"
            color="primary"
            data-icon="chevron-down"
            data-prefix="far"
            focusable="false"
            onClick={[Function]}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M441.9 167.3l-19.8-19.8c-4.7-4.7-12.3-4.7-17 0L224 328.2 42.9 147.5c-4.7-4.7-12.3-4.7-17 0L6.1 167.3c-4.7 4.7-4.7 12.3 0 17l209.4 209.4c4.7 4.7 12.3 4.7 17 0l209.4-209.4c4.7-4.7 4.7-12.3 0-17z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="c15"
    >
      <div
        className="ReactCollapse--collapse"
        style={
          Object {
            "height": "0px",
            "overflow": "hidden",
          }
        }
      >
        <div
          className="ReactCollapse--content"
        >
          <div
            className="c16"
          >
            <span
              className="MuiTypography-root c11 MuiTypography-body2"
              fontSize="md"
              fontStyle="normal"
              fontWeight="regular"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt suscipit purus, et ultrices ante sagittis sit amet. Nulla in scelerisque erat. Phasellus molestie turpis vel nisi commodo lacinia. Etiam vitae lectus lectus. Etiam et diam ex. Cras tellus dolor, congue sed libero cursus, dictum dapibus nisl. Nam efficitur ante non nibh efficitur, sed porttitor nisi tristique. Duis pellentesque eu dolor sit amet tristique. Ut id ligula aliquet, suscipit erat eget, commodo nisi. Sed ut diam non turpis pretium ultricies nec non purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras sagittis nisl sit amet mollis blandit. Fusce hendrerit lacus nec cursus scelerisque. Nullam mollis eu ante in pharetra. In aliquam sapien eu rutrum vestibulum. Aenean facilisis leo vitae odio laoreet ultrices.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    data-cy="historyItem"
  >
    <div
      className="c2 c3"
    />
    <div
      className="c4"
    >
      <div
        className="c17 c6"
        color="secondary"
        prefix="far"
        size="md"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-plus fa-w-12 c18"
          color="secondary"
          data-icon="plus"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 384 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <span
            className="MuiTypography-root c10 MuiTypography-body2"
            fontSize="md"
            fontStyle="normal"
            fontWeight="bold"
          >
            Test 2
          </span>
        </div>
        <div
          className="c9"
        >
          <span
            className="MuiTypography-root c11 MuiTypography-body2 MuiTypography-colorTextSecondary"
            fontSize="md"
            fontStyle="normal"
            fontWeight="regular"
          >
            
          </span>
        </div>
        <div
          className="c9"
        >
          <span
            className="MuiTypography-root c12 MuiTypography-body2 MuiTypography-colorTextSecondary"
            fontSize="md"
            fontStyle="italic"
            fontWeight="regular"
          >
            2020-02-10
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    data-cy="historyItem"
  >
    <div
      className="c2 c3"
    />
    <div
      className="c4"
    >
      <div
        className="c19 c6"
        color="warning"
        prefix="far"
        size="md"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-copy fa-w-14 c20"
          color="warning"
          data-icon="copy"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="c8"
      >
        <div
          className="c9"
        >
          <span
            className="MuiTypography-root c10 MuiTypography-body2"
            fontSize="md"
            fontStyle="normal"
            fontWeight="bold"
          >
            Test 3
          </span>
        </div>
        <div
          className="c9"
        >
          <span
            className="MuiTypography-root c11 MuiTypography-body2 MuiTypography-colorTextSecondary"
            fontSize="md"
            fontStyle="normal"
            fontWeight="regular"
          >
            
          </span>
        </div>
        <div
          className="c9"
        >
          <span
            className="MuiTypography-root c12 MuiTypography-body2 MuiTypography-colorTextSecondary"
            fontSize="md"
            fontStyle="italic"
            fontWeight="regular"
          >
            2020-01-23
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Main 1`] = `
.c0 {
  position: relative;
  padding: 16px;
}

.c1 {
  font-size: 16px;
  color: #AC00fC;
}

<div
  className="c0"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-check-circle fa-w-16 c1"
    color="primary"
    data-icon="check-circle"
    data-prefix="far"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Image Main 1`] = `
.c0 {
  position: relative;
  padding: 16px;
}

<div
  className="c0"
>
  <img
    alt="Majid Amiri"
    className=""
    itemProp="contentUrl"
    src="https://via.placeholder.com/350x150"
  />
</div>
`;

exports[`Storyshots ShareModule Main 1`] = `
.c0 {
  position: relative;
  padding: 16px;
}

.c2.c2 {
  box-sizing: border-box;
  border-radius: 12px;
  padding: 0 16px;
  min-width: 40px;
  height: 40px;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  font-size: 16px;
}

.c2.c2:hover {
  opacity: 0.7;
}

.c2.c2:disabled {
  opacity: 0.3;
  cursor: not-allowed;
  pointer-events: none;
}

.c5.c5 {
  font-weight: normal;
  font-size: 12px;
  font-style: italic;
}

.c4 {
  font-size: 20px;
  color: #AC00fC;
}

.c8 {
  font-size: 16px;
  color: #CECDD9;
}

.c10 {
  font-size: 16px;
  color: #4D4B63;
  cursor: pointer;
  -webkit-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
}

.c10:hover {
  opacity: 0.7;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-radius: 12px;
  background-color: #FFFFFF;
  border: 1px solid #CECDD9;
  padding: 0 16px;
  outline: none;
  height: 40px;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7:not(:last-child) {
  margin-right: 16px;
}

.c7:focus-within {
  border: 1px solid #AC00fC;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 600;
  font-size: 14px;
  line-height: 120%;
  padding: 8px;
  color: #292839;
  outline: none;
  border: none;
  height: 100%;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  -webkit-user-select: all;
  -moz-user-select: all;
  -ms-user-select: all;
  user-select: all;
}

.c9::-webkit-input-placeholder {
  font-weight: normal;
}

.c9::-moz-placeholder {
  font-weight: normal;
}

.c9:-ms-input-placeholder {
  font-weight: normal;
}

.c9::placeholder {
  font-weight: normal;
}

.c9:disabled {
  opacity: 0.3;
  cursor: not-allowed;
  pointer-events: none;
}

.c9:disabled {
  opacity: 0.3;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3.c3 {
  width: 40px;
  height: 40px;
  background-color: #F0F0F4;
}

.c3.c3 svg {
  color: #292839;
}

.c3.c3:hover {
  background-color: #F5E0FF;
}

.c3.c3:hover svg {
  color: #AC00fC;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c6.c6 {
  margin: 8px 0;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <a
        aria-disabled={false}
        className="MuiButtonBase-root c2 c3"
        color="primary"
        href="https://twitter.com/intent/tweet?url=https://license.rocks/"
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="md"
        tabIndex={0}
        target="_blank"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-twitter fa-w-16 c4"
          color="primary"
          data-icon="twitter"
          data-prefix="fab"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root c2 c3"
        color="primary"
        href="https://www.facebook.com/sharer.php?u=https://license.rocks/"
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="md"
        tabIndex={0}
        target="_blank"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-facebook-f fa-w-10 c4"
          color="primary"
          data-icon="facebook-f"
          data-prefix="fab"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root c2 c3"
        color="primary"
        href="tg://msg?text=https://license.rocks/"
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="md"
        tabIndex={0}
        target="_blank"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-telegram-plane fa-w-14 c4"
          color="primary"
          data-icon="telegram-plane"
          data-prefix="fab"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root c2 c3"
        color="primary"
        href="whatsapp://send?https://license.rocks/"
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="md"
        tabIndex={0}
        target="_blank"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-whatsapp fa-w-14 c4"
          color="primary"
          data-icon="whatsapp"
          data-prefix="fab"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root c2 c3"
        color="primary"
        href="mailto:?body=https://license.rocks/"
        onBlur={[Function]}
        onClick={null}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="md"
        tabIndex={0}
        target="_blank"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-envelope fa-w-16 c4"
          color="primary"
          data-icon="envelope"
          data-prefix="far"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </a>
    </div>
    <div
      className="MuiTypography-root c5 c6 MuiTypography-body2 MuiTypography-colorTextSecondary"
      fontSize="sm"
      fontStyle="italic"
      fontWeight="regular"
    >
      Or copy the link
    </div>
    <div
      className="c7"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-link fa-w-16 c8"
        color="input"
        data-icon="link"
        data-prefix="far"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M314.222 197.78c51.091 51.091 54.377 132.287 9.75 187.16-6.242 7.73-2.784 3.865-84.94 86.02-54.696 54.696-143.266 54.745-197.99 0-54.711-54.69-54.734-143.255 0-197.99 32.773-32.773 51.835-51.899 63.409-63.457 7.463-7.452 20.331-2.354 20.486 8.192a173.31 173.31 0 0 0 4.746 37.828c.966 4.029-.272 8.269-3.202 11.198L80.632 312.57c-32.755 32.775-32.887 85.892 0 118.8 32.775 32.755 85.892 32.887 118.8 0l75.19-75.2c32.718-32.725 32.777-86.013 0-118.79a83.722 83.722 0 0 0-22.814-16.229c-4.623-2.233-7.182-7.25-6.561-12.346 1.356-11.122 6.296-21.885 14.815-30.405l4.375-4.375c3.625-3.626 9.177-4.594 13.76-2.294 12.999 6.524 25.187 15.211 36.025 26.049zM470.958 41.04c-54.724-54.745-143.294-54.696-197.99 0-82.156 82.156-78.698 78.29-84.94 86.02-44.627 54.873-41.341 136.069 9.75 187.16 10.838 10.838 23.026 19.525 36.025 26.049 4.582 2.3 10.134 1.331 13.76-2.294l4.375-4.375c8.52-8.519 13.459-19.283 14.815-30.405.621-5.096-1.938-10.113-6.561-12.346a83.706 83.706 0 0 1-22.814-16.229c-32.777-32.777-32.718-86.065 0-118.79l75.19-75.2c32.908-32.887 86.025-32.755 118.8 0 32.887 32.908 32.755 86.025 0 118.8l-45.848 45.84c-2.93 2.929-4.168 7.169-3.202 11.198a173.31 173.31 0 0 1 4.746 37.828c.155 10.546 13.023 15.644 20.486 8.192 11.574-11.558 30.636-30.684 63.409-63.457 54.733-54.735 54.71-143.3-.001-197.991z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <input
        className="c9"
        disabled={false}
        hasError={false}
        readOnly={true}
        selectable={true}
        type="text"
        value="https://license.rocks/"
      />
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-copy fa-w-14 c10"
        color="secondary"
        data-icon="copy"
        data-prefix="far"
        focusable="false"
        onClick={[Function]}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Typography/Headings Main 1`] = `
.c0 {
  position: relative;
  padding: 16px;
}

<div
  className="c0"
>
  <h3
    className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
  >
    h1
  </h3>
  <h1
    className="MuiTypography-root MuiTypography-h1"
  >
    license.rocks is among the Top10 at the German startup award
  </h1>
  <h3
    className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
  >
    h2
  </h3>
  <h2
    className="MuiTypography-root MuiTypography-h2"
  >
    license.rocks is among the Top10 at the German startup award
  </h2>
  <h3
    className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
  >
    h3
  </h3>
  <h3
    className="MuiTypography-root MuiTypography-h3"
  >
    license.rocks is among the Top10 at the German startup award
  </h3>
  <h3
    className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
  >
    h4
  </h3>
  <h4
    className="MuiTypography-root MuiTypography-h4"
  >
    license.rocks is among the Top10 at the German startup award
  </h4>
  <h3
    className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
  >
    h5
  </h3>
  <h5
    className="MuiTypography-root MuiTypography-h5"
  >
    license.rocks is among the Top10 at the German startup award
  </h5>
  <h3
    className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
  >
    h6
  </h3>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  >
    license.rocks is among the Top10 at the German startup award
  </h6>
</div>
`;

exports[`Storyshots Typography/Text Main 1`] = `
.c0 {
  position: relative;
  padding: 16px;
}

.c1.c1 {
  font-weight: normal;
  font-size: 16px;
  font-style: normal;
}

.c3.c3 {
  font-weight: normal;
  font-size: 14px;
  font-style: normal;
}

.c2.c2 {
  margin-bottom: 8px;
}

<div
  className="c0"
>
  <h3
    className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
  >
    Paragraph
  </h3>
  <p
    className="MuiTypography-root c1 c2 MuiTypography-body1 MuiTypography-paragraph"
    fontSize="md"
    fontStyle="normal"
    fontWeight="regular"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s
  </p>
  <h3
    className="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextSecondary"
  >
    Text
  </h3>
  <span
    className="MuiTypography-root c3 MuiTypography-body2"
    fontSize="md"
    fontStyle="normal"
    fontWeight="regular"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s
  </span>
</div>
`;
